| Summary: | ASTERISK-26808: res_pjsip_outbound_registration doesn't know about network change events | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2017-02-21 18:03:57.000-0600 | Date Closed: | 2017-02-28 19:06:40.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_outbound_registration |
| Versions: | 13.14.0 14.3.0 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When a network change event happens, such as a switchover from a primary to a backup ISP that results in a public ip address change, outbound registrations aren't refreshed. This leaves asterisk unable to take calls from providers until the next periodic refresh.
| ||
| Comments: | By: Friendly Automation (friendly-automation) 2017-02-28 19:06:41.826-0600 Change 5056 merged by Joshua Colp: res_pjsip_outbound_registration: Subscribe to network change events [https://gerrit.asterisk.org/5056|https://gerrit.asterisk.org/5056] By: Friendly Automation (friendly-automation) 2017-02-28 19:25:13.212-0600 Change 5055 merged by zuul: res_pjsip_outbound_registration: Subscribe to network change events [https://gerrit.asterisk.org/5055|https://gerrit.asterisk.org/5055] By: Friendly Automation (friendly-automation) 2017-02-28 19:26:07.840-0600 Change 5057 merged by Joshua Colp: res_pjsip_outbound_registration: Subscribe to network change events [https://gerrit.asterisk.org/5057|https://gerrit.asterisk.org/5057] | ||